# job_web_scraper

./: .gitignore  README.md  job_radar.py  main.py  plan.txt  pyproject.toml
job_hunter/: __init__.py  filters.py  greenhouse.py  hn_fetch.py  hn_jobs.py  job_scanner.py  lever.py  main.py  models.py  pipeline.py  scoring.py  scraper_utils.py  storage.py  wellfound_scraper.py  yc_companies.py  yc_scraper.py
job_web_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
plans/: location-eligibility-tightening.md
plans/archive/: backend-job-discovery-cli.md  location-eligibility-tightening.md
tests/: test_db_defaults.py  test_location_policy.py
