[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-web-scraper"
version = "0.1.0"
description = "Local CLI for discovering fresh backend jobs from YC and Wellfound."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "playwright>=1.45.0",
]

[project.scripts]
job-hunter = "job_hunter.main:main"

[tool.setuptools.packages.find]
include = ["job_hunter*"]
